# rag-cli

./: makefile  pyproject.toml
app/embeddings/: cli.py  config.py  db.py  embeddings.py  process_files.py  text_processing.py  utils.py
docker/: Dockerfile
